--- a/TodoList/packages.config
+++ b/TodoList/packages.config
@@ -2,11 +2,14 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="Common.Logging" version="2.0.0" targetFramework="net45" />
+  <package id="Common.Logging.Log4Net" version="2.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.BlockUI" version="2.66" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0" targetFramework="net45" />
